@@ -15,6 +15,7 @@ log4j.version=1.2.8
 #rhino.version=1.5R5
 oro.version=2.0.8
 regexp.version=1.3
+which.version=1.0
 xerces.version=2.6.2
 xalan.version=2.5.1
 xml-resolver.version=1.1
